--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -92,9 +92,9 @@ We utilize both theoretical and computational tools to understand the nature of 
 % \Include{Introduction}
 % \Include{Theory}
 % \chapter{Charge order and spin-momentum locking in high spin-orbit coupled ferroelectrics}
-% \Include{Rashba}
+\Include{Rashba}
 % \Include{GdMn2O5}
-\Include{Softening}
+% \Include{Softening}
 % \Include{Cr}
 % \chapter{Strong coupling and ultrafast control of charge and spin density waves in elemental Chromium}
 % \subfile{chapters/chromium_sdw_cdw.tex}
